--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,18 +1,18 @@
-spring.application.name=estagio
-spring.h2.console.settings.web-allow-others=true
-
-spring.jpa.open-in-view=false
-spring.datasource.url=jdbc:h2:mem:cartao-db
+spring.datasource.url=jdbc:h2:mem:cartao-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
+spring.h2.console.settings.web-allow-others=true
+server.port=8080
+server.servlet.context-path=/api
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
